<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/shape">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/icon_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="2dp"
        android:text="@string/isim"
        android:textSize="14sp"
        android:textColor="#3D4242"
        android:maxLength="27"
        android:layout_alignTop="@+id/imageView"/>

    <TextView
        android:id="@+id/numberValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/numara"
        android:textSize="14sp"
        android:textColor="#4F5559"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_alignTop="@+id/imageView"/>

    <TextView
        android:id="@+id/onlineDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online_sure"
        android:textColor="#4F5559"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="3dp"
        android:layout_alignStart="@+id/nameValue"/>

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_online_time"
        android:textSize="12sp"
        android:textColor="#3D4242"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/endTime"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_offline_time"
        android:textSize="12sp"
        android:textColor="#3D4242"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_alignEnd="@+id/numberValue"/>
</RelativeLayout>
